--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/Leaflet/Leaflet.git"
+    "url": "git://github.com/suspiciousowls43/leaflet.git"
   },
   "keywords": [
     "gis",
